[package]
name = "tiny-server"
version = "0.1.0"
authors = ["omagdy7 <omar.professional8777@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"                                # General iterator helpers
regex = "1.10.4"
flate2 = "1.0.30"
base64 = "0.22.1"

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions

